# frontend/openapi.json
@@ -7029,18 +7029,6 @@
             "title": "Rclone Args",
             "default": []
           },
-          "backup_dir": {
-            "anyOf": [
-              {
-                "type": "string",
-                "maxLength": 1024
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Backup Dir"
-          },
           "max_retries": {
             "type": "integer",
             "maximum": 10.0,
@@ -7126,17 +7114,6 @@
             "type": "array",
             "title": "Rclone Args",
             "default": []
-          },
-          "backup_dir": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Backup Dir"
           },
           "max_retries": {
             "type": "integer",
@@ -7248,17 +7225,6 @@
             "type": "array",
             "title": "Rclone Args",
             "default": []
-          },
-          "backup_dir": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Backup Dir"
           },
           "max_retries": {
             "type": "integer",
@@ -7620,18 +7586,6 @@
               }
             ],
             "title": "Rclone Args"
-          },
-          "backup_dir": {
-            "anyOf": [
-              {
-                "type": "string",
-                "maxLength": 1024
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Backup Dir"
           },
           "max_retries": {
             "anyOf": [
